--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "frisby": "^2.1.2",
-    "jest": "^26.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "multer": "^1.4.2",
@@ -35,6 +34,8 @@
   "devDependencies": {
     "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.0",
+    "jest": "^26.6.3",
+    "lint": "^0.7.0"
   }
 }
