--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.4",
     "shelljs": "^0.8.4"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.0",
+    "nodemon": "^2.0.4"
   }
 }
