--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --runInBand  --detectOpenHandles --forceExit",
     "start": "node index.js",
-    "start:watch": "nodemon index.js",
+    "dev": "nodemon index.js",
     "lint": "eslint --no-inline-config --ext .js,.jsx --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "repository": {
