--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sd-0x-project-cookmaster-v2",
   "version": "1.0.0",
-  "description": "Você já usa o GitHub diariamente para desenvolver os exercícios, certo? Agora, para desenvolver os projetos, você deverá seguir as instruções a seguir. Fique atento a cada passo, e se tiver qualquer dúvida, nos envie por Slack! #vqv 🚀",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest --runInBand  --detectOpenHandles --forceExit",
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rescue": "^1.1.31",
     "frisby": "^2.1.2",
     "jest": "^26.4.1",
     "jsonwebtoken": "^8.5.1",
