--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongodb": "^3.5.9",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
+    "rescue": "^6.0.4",
     "shelljs": "^0.8.4"
   },
   "devDependencies": {
